--- a/BikeShopAPI_UI/Pages/TransUserDir.razor
+++ b/BikeShopAPI_UI/Pages/TransUserDir.razor
@@ -1,4 +1,5 @@
 ﻿@inject NavigationManager NavigationManager
+@page "/TransUserDir"
 
 <h3>TransUserDir</h3>
 
@@ -17,5 +18,5 @@
     {
         NavigationManager.NavigateTo("get transaction");
     }
-    }
 }
+
