--- a/BikeShopAPI_UI/Pages/UserDir.razor
+++ b/BikeShopAPI_UI/Pages/UserDir.razor
@@ -80,17 +80,17 @@
 
     void error()
     {
-        NavigationManager.NavigateTo("UserPanelError");
+        NavigationManager.NavigateTo("ErrorUserDir");
     }
 
     void trans()
     {
-        NavigationManager.NavigateTo("UserPanelTrans");
+        NavigationManager.NavigateTo("TransUserDir");
     }
 
     void log()
     {
-        NavigationManager.NavigateTo("UserPanelLogin");
+        NavigationManager.NavigateTo("LoginUserDir");
     }
 
     private void LogOut()
