--- a/BikeShopAPI_UI/Pages/DeleteOneTransaction.razor
+++ b/BikeShopAPI_UI/Pages/DeleteOneTransaction.razor
@@ -17,7 +17,7 @@ else if (response.StatusCode == System.Net.HttpStatusCode.BadRequest)
 }
 else
 {
-    <p>Click to truncate table</p>
+    <p>Click to delete</p>
 }
 
 @code {
