Corrected Routing for user

--- a/BikeShopAPI_UI/Pages/AdminDir.razor
+++ b/BikeShopAPI_UI/Pages/AdminDir.razor
@@ -38,7 +38,7 @@
 @code {
     void web()
     {
-        NavigationManager.NavigateTo("AdminPanelWeb");
+        NavigationManager.NavigateTo("WebAdminDir");
     }
 
     void error()
