User Dir changes

--- a/BikeShopAPI_UI/Pages/UserDir.razor
+++ b/BikeShopAPI_UI/Pages/UserDir.razor
@@ -70,7 +70,7 @@
 @code {
     void web()
     {
-        NavigationManager.NavigateTo("UserPanelWeb");
+        NavigationManager.NavigateTo("WebUserDir");
     }
 
     void error()
