--- a/BikeShopAPI_UI/Pages/WebUserDir.razor
+++ b/BikeShopAPI_UI/Pages/WebUserDir.razor
@@ -1,4 +1,5 @@
-﻿@inject NavigationManager NavigationManager
+﻿@page "/WebUserDir"
+@inject NavigationManager NavigationManager
 
 <h3>WebUserDir</h3>
 
