--- a/BikeShopAPI_UI/Pages/ErrorUserDir.razor
+++ b/BikeShopAPI_UI/Pages/ErrorUserDir.razor
@@ -10,12 +10,12 @@
 @code {
     void fetch()
     {
-        NavigationManager.NavigateTo("fetch transactions");
+        NavigationManager.NavigateTo("fetch error rates");
     }
 
     void Get()
     {
-        NavigationManager.NavigateTo("get transaction");
+        NavigationManager.NavigateTo("get error rate");
     }
 }
 
