--- a/BikeShopAPI_UI/Pages/LoginUserDir.razor
+++ b/BikeShopAPI_UI/Pages/LoginUserDir.razor
@@ -11,12 +11,12 @@
 @code {
     void fetch()
     {
-        NavigationManager.NavigateTo("fetch transactions");
+        NavigationManager.NavigateTo("fetch logins");
     }
 
     void Get()
     {
-        NavigationManager.NavigateTo("get transaction");
+        NavigationManager.NavigateTo("get login");
     }
 }
 
